fix: multi-select scrollbar and max selected courses

--- a/src/styles/course/courseTaken.scss
+++ b/src/styles/course/courseTaken.scss
@@ -52,6 +52,7 @@
   &.relative-position {
     position: relative;
     bottom: unset;
+    flex-shrink: 0;
   }
 
   .add-button {
