--- a/src/styles/layout/searchResult.scss
+++ b/src/styles/layout/searchResult.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  min-height: 0;
 
   margin-top: 0.5rem;
   padding-top: 0.25rem;
@@ -36,10 +37,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.125rem;
-  margin: 0.5rem 0 0.5rem 0;
+  gap: 0.5rem;
+  margin: 0 0 0.5rem 0;
+  width: 100%;
+  min-height: 0;
 
   .multi-select-info {
+    flex-shrink: 0;
     font-size: 0.75rem;
     color: var(--gray-600);
   }
@@ -54,22 +58,42 @@
       color: var(--gray-800);
     }
   }
+
+  &.expanded {
+    // flex-grow: 1;
+    overflow: hidden;
+    height: 100%;
+  }
+
+  .multi-select-container-inner {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    overflow: hidden;
+  }
 }
 
 .multi-select {
   position: relative;
   display: flex;
-  flex-direction: column-reverse; // to use native css stacking
+  flex-direction: column; // to use native css stacking
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   cursor: pointer;
   height: fit-content;
-  margin-top: 0.25rem;
+  max-height: 100%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.75rem;
+  width: 100%;
+  overflow: visible;
+
+  box-sizing: border-box;
 
   .mini-course-card {
     transition: all 0.4s ease;
     // TODO: fix this to 4rem when min-height issue is resolved
     height: 3.9375rem;
+    position: relative;
 
     .name {
       max-width: 100%;
@@ -81,8 +105,10 @@
   }
 
   &.expanded {
-    // overflow: scroll;
+    height: fit-content;
+    min-height: 0;
     cursor: pointer;
+    overflow: scroll;
   }
 
   &.min-height-enabled {
